# lldc

./: .gitignore  README.md  pyproject.toml  setup.sh
artifacts/results/: ar_baseline.json  baselines.json  factual_recall.json  pm_points.json  rd_aggregates.json  static_size.json  vq_points.json
artifacts/results/dataset_stats/: mathematics.json  mathematics.tsv  the-stack.json  the-stack.tsv  tinystories.json  tinystories.tsv  wikitext-103.json  wikitext-103.tsv  wikitext-2.json  wikitext-2.tsv
artifacts/results/exp3a_custom_run/: entropy_tradeoff_results.json
artifacts/results/exp4a_fast_it/: alpha_r_refit.json  alpha_r_refit_0p5B.json  exp4a_summary.json  gsm_hard_results.json  hotpot_bridge_results.json  natural_q_results.json  trivia_mem_results.json
artifacts/results/exp5_pos/: exp5_pos_master_summary.json  exp5_pos_summary_s1000.json  exp5_pos_summary_s500.json
artifacts/results_old/: abstract_reasoning.json  amortised_bpc_curves.json  ar_baseline.json  baselines.json  breakeven_table.tsv  dataset_stats_mi.json  factual_recall.json  ngram8_baseline.json  pm_points.json  rd_aggregates.json  static_size.json  vq_points.json
artifacts/results_old/e3a_entropy_tradeoff/: entropy_tradeoff_results_m_1_7.json  entropy_tradeoff_results_ma10.json  entropy_tradeoff_results_ma100.json  entropy_tradeoff_results_ma200.json  entropy_tradeoff_results_t100.json  entropy_tradeoff_results_t200.json  entropy_tradeoff_results_w10.json  entropy_tradeoff_results_w100.json  entropy_tradeoff_results_w200.json  entropy_tradeoff_resultst_t10.json
artifacts/results_old/exp4a/: exp4a_summary.json  exp4a_summary_10.json  gsm_hard_results.json  hotpot_bridge_results.json  (+2 more)
configs/: defaults.yaml
configs/data/: mathematics.yaml  the-stack.yaml  tinystories.yaml  wikitext-103.yaml  wikitext-2.yaml
configs/experiment/: e2b_channel.yaml  e3a_entropy_tradeoff.yaml  e4a_decomposition.yaml  e4a_decomposition_fast_it.yaml  e5_pos_modular.yaml  e5ab_modular_decomposition.yaml  e5c_advanced_modular.yaml  exp3a_custom_config.yaml
lldc/baselines/: kenlm_subsample.py
lldc/compression/: compressor_vq.py
lldc/data/: bootstrap.py  ood.py  ood_sources.py
lldc/eval/: entropy_tradeoff.py  functional.py
lldc/metrics/: crumpled_paper.py  fidelity.py
lldc/models/: specialization.py
lldc/scripts/: sweeps.py
lldc/utils/: seed.py
(+18 files in other folders)
